refactor: simplify SCSS imports by removing unused component imports

--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,1 @@
-@import 'node_modules/@govbr-ds/core/src/partial/scss/core-base.scss';
-@import 'node_modules/@govbr-ds/core/src/components/button/button';
-@import 'node_modules/@govbr-ds/core/src/components/avatar/avatar';
-@import 'node_modules/@govbr-ds/core/src/components/card/card';
+@import "node_modules/@govbr-ds/core/src/partial/scss/core-base.scss";
